# bijux-pollenomics

./: .benchmarks  .gitignore  .hypothesis  .tox  .venv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.shared.yml  mkdocs.yml  pyproject.toml  tox.ini
.bijux/: checks.consumer.json
.bijux/shared/: shared-dir-sha256.txt
.github/: CODEOWNERS  automation-identity.md  bijux-std-shared.sha256  dependabot.yml  release.env
.github/rulesets/: main-branch-protection.json
.github/scripts/: build_repo_manifest.py  check_workflow_prerequisites.py
.github/standards/: bijux-std.sha  repo-config.manifest.json
.github/workflows/: automerge-pr.yml  bijux-std-checks.yml  build-release-artifacts.yml  ci-package.yml  ci.yml  deploy-docs.yml  github-policy.yml  labeler.yml  publish.yml  release-artifacts.yml  release-ghcr.yml  release-github.yml  release-pypi.yml  verify.yml
configs/: coveragerc.ini  deptry.toml  mypy.ini  package-lock.json  package.json  pytest.ini  ruff.toml  schemathesis.toml
data/: README.md  collection_summary.json  evidence_artifact_contracts.json  source_fact_ownership_registry.json  source_family_contracts.json  source_family_evidence_stage_matrix.json
data/adna/: README.md  animal_sample_aggregation_warnings.md  animal_sample_foundation_truth.json  animal_sample_foundation_truth_projects.csv  animal_sample_foundation_truth_species.csv  animal_sample_product_contract.md  coordinate_caveat_surface.json  coordinate_caveat_surface.md  cross_species_coverage_dashboard.csv  cross_species_coverage_dashboard.json  cross_species_map_readiness.json  overbroad_site_ledger.csv  overbroad_site_ledger.json  shipped_product_audit.json  unresolved_site_ledger.csv  unresolved_site_ledger.json
docs/: badges.md  index.md
docs/01-bijux-pollenomics/: index.md
docs/01-introduction/: current-app-scope.md  index.md  map-first-product-model.md  scope-and-non-goals.md  what-bijux-pollen-does.md  what-bijux-pollenomics-does.md
docs/02-bijux-pollenomics-data/: index.md
docs/02-getting-started/: generate-reports-and-map.md  index.md  install-and-verify.md  rebuild-the-data-tree.md  troubleshoot-early-problems.md
docs/03-bijux-pollenomics-maintain/: index.md
docs/03-data-guide/: aadr.md  boundaries.md  data-categories.md  index.md  landclim.md  neotoma.md  raa.md  sead.md
docs/04-fieldwork/: index.md  lyngsjon-lake-fieldwork.md
docs/04-reports/: country-reports.md  index.md  lyngsjon-lake-fieldwork.md  published-artifacts.md  shared-nordic-map.md
docs/05-architecture/: data-collection-flow.md  index.md  source-layout-and-ownership.md  system-overview.md
docs/05-nordic-evidence-atlas/: filters-and-popups.md  index.md  limits-and-audit.md  point-construction.md
docs/06-development/: documentation-workflow.md  index.md  local-workflow.md  testing-and-evidence.md
docs/07-reference/: command-surface.md  data-layout.md  glossary.md  index.md  report-layout.md
docs/architecture/: codebase-layout-and-ownership.md  data-collection-flow.md  index.md  publication-flow.md  system-overview.md
docs/bijux-pollenomics/: api-and-schema-governance.md  apis.md  index.md
docs/bijux-pollenomics-data/: index.md
docs/bijux-pollenomics-maintain/: index.md
docs/data/: README.md
docs/data-sources/: aadr.md  boundaries.md  index.md  landclim.md  neotoma.md  provenance-and-refresh-policy.md  raa.md  sead.md  source-comparison.md
docs/engineering/: automation-workflows.md  change-review-checklist.md  documentation-standards.md  index.md  local-workflow.md  testing-and-evidence.md
docs/foundation/: index.md  map-first-product-model.md  product-overview.md  repository-scope.md  scope-and-non-goals.md
docs/hooks/: publish_site_assets.py
docs/internal/: index.md
docs/outputs/: artifact-lifecycle.md  country-reports.md  index.md  lyngsjon-lake-fieldwork.md  nordic-evidence-atlas.md  published-artifacts.md
docs/overrides/: main.html
docs/public/: index.md
docs/reference/: command-reference.md  configuration-defaults.md  data-layout.md  (+3 more)
makes/: README.md  api-freeze.mk  api.mk  bijux-docs.mk  build.mk  docs.mk  env.mk  gates.mk  lint.mk  packages.mk  publish.mk  quality.mk  root.mk  sbom.mk  security.mk  test.mk
tests/: __init__.py  test_aadr_data.py  test_boundaries.py  test_cli.py  test_common.py  test_context_data.py  test_country_report.py  test_data_collector.py  test_geometry.py  test_landclim_data.py  test_neotoma_data.py  test_xlsx.py
(+2595 files in other folders)
