[project]
name = "bijux-pollenomics-repository"
version = "0.1.0"
description = "Repository workspace for bijux-pollenomics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Documentation = "https://bijux.io/bijux-pollenomics/"
Repository = "https://github.com/bijux/bijux-pollenomics"
Issues = "https://github.com/bijux/bijux-pollenomics/issues"

[dependency-groups]
dev = [
    "bijux-pollenomics[dev]",
    "bijux-pollenomics-dev",
]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = true
annotated_tag = true
update_changelog_on_bump = false

[tool.bijux_pollenomics]
api_dir = "apis"
packages = [
    "bijux-pollenomics",
    "bijux-pollenomics-dev",
]
docs_package = "bijux-pollenomics-dev"
config_dir = "configs"
make_dir = "makes"

[tool.uv.sources]
bijux-pollenomics = { workspace = true }
bijux-pollenomics-dev = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
